@@ -156,12 +156,13 @@ because most of the time the default settings are sufficient.
     If you choose ``use_pool=False`` you can also make use of the `cap` values,
     see below.
 
-* ``freeze_pool_input``
+* ``freeze_input``
 
     Can be set to ``True`` if the run function as well as all additional arguments
     are immutable. This will prevent the trajectory from getting pickled again and again.
     Thus, the run function, the trajectory as well as all arguments are passed to the pool
-    at initialisation. Works also under :func:`~pypet.environment.Environment.f_run_map`.
+    or SCOOP_ workers at initialisation.
+    Works also under :func:`~pypet.environment.Environment.f_run_map`.
     In this case the iterable arguments are, of course, not frozen but passed for every run.
 
 * ``queue_maxsize``
@@ -694,7 +695,7 @@ In case your operating system allows forking, your data does not need to be
 picklable.
 Furthermore, if your trajectory contains many parameters and
 you want to avoid that your trajectory
-gets pickled over and over again you can set ``freeze_pool_input=True``.
+gets pickled over and over again you can set ``freeze_input=True``.
 The trajectory, the run function as well as the
 all additional function arguments are passed to the multiprocessing pool at
 initialization. Be aware that the run function as well as the the additional arguments must be
@@ -838,6 +839,15 @@ on how to set up multiple hosts and scripts for cluster grid engines, respective
 By the way, on SGE you need to use a parallel environment via the ``#$ -pe`` flag.
 This is also important to let SCOOP_ know how many workers it can start on the cluster.
 
+To avoid overhead of re-pickling the trajectory,
+SCOOP_ mode also supports setting ``freeze_input=True`` (see :ref:`more-on-multiprocessing`).
+However, freezing input for SCOOP_ is based on `shared constants`_ which will remain
+on every worker until they are shut down. Thus, if you run many experiments (i.e. multiple
+batches of ``f_run`` or ``f_run_map``) within
+the same Python interpreter session, memory consumed by all workers increases
+over time. If you experience memory problems simply restart your Python session
+and run less experiments in one go or set ``freeze_input=False``.
+
 Moreover, you can also use *pypet* with `SAGA Python`_ to manually schedule your experiments
 on a cluster environment. :ref:`example-22` shows how to submit batches of experiments
 and later on merge the trajectories from each experiment into one.
@@ -851,6 +861,7 @@ and later on merge the trajectories from each experiment into one.
 
 .. _example start up scripts: https://github.com/soravux/scoop/tree/master/examples/submit_files
 
+.. _shared constants: http://scoop.readthedocs.org/en/latest/_modules/scoop/shared.html
 
 .. _more-on-git:
 
