@@ -41,7 +41,7 @@ def main():
                       log_stdout=True,
                       comment='Multiprocessing example using SCOOP!',
                       multiproc=True,
-                      freeze_pool_input=True, # We want to save overhead and freeze input
+                      freeze_input=True, # We want to save overhead and freeze input
                       use_scoop=True, # Yes we want SCOOP!
                       wrap_mode=pypetconstants.WRAP_MODE_LOCAL,  # SCOOP only works with 'LOCAL'
                       overwrite_file=True)
